# serverless-bookmark-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .trivyignore  ARCHITECTURE.md  LICENSE  README.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  frontend-ci.yml  k8s-kind-demo.yml  terraform-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d6026484f314_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  bookmarks.py  health.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  associations.py  bookmark.py  refresh_token.py  tag.py  user.py
backend/app/schemas/: bookmark.py  user.py
backend/app/services/: auth_service.py  bookmark_service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_bookmarks.py  test_models.py
backend/tests/unit/: test_config.py  test_security.py
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  bookmarks.ts  client.test.ts  client.ts  types.ts
frontend/src/auth/: AuthContext.tsx  tokenStorage.ts  useAuth.ts
frontend/src/pages/: BookmarkFormPage.tsx  BookmarksPage.test.tsx  BookmarksPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.tsx
infra/terraform/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/envs/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/global/: main.tf  variables.tf
infra/terraform/modules/github_oidc/: main.tf  variables.tf
infra/terraform/modules/lambda_api/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda_api/placeholder/: handler.py
k8s-demo/: smoke-test.sh
k8s-demo/base/: app.yaml  configmap.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  postgres.yaml  secrets.yaml
k8s-demo/overlays/ci/: kustomization.yaml
