[project]
name = "serverless-bookmark-manager"
version = "0.1.0"
description = "FastAPI backend for the serverless bookmark manager portfolio project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "mangum>=0.19,<0.20",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.32,<0.33",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
    "black>=24.10,<25",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "mangum.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
