[project]
name = "serverless-bookmark-manager"
version = "0.1.0"
description = "FastAPI backend for the serverless bookmark manager portfolio project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.140",
    "mangum>=0.19,<0.22",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.32",
    "alembic>=1.14,<1.19",
    "pydantic[email]>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "argon2-cffi>=23.1,<26",
    "pyjwt>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.32,<0.52",
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.24,<1.5",
    "pytest-cov>=6.0,<8",
    "httpx>=0.27,<0.29",
    "ruff>=0.7,<0.16",
    "black>=24.10,<27",
    "mypy>=1.13,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/etc. in argument defaults is the documented,
# intentional idiom (FastAPI inspects the default at call time) - not the
# "mutable default" footgun B008 exists to catch.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "mangum.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Explicit default (function scope) to silence pytest-asyncio's deprecation
# warning. Each test gets its own event loop; see tests/integration/conftest.py
# for why the cached engine is deliberately *not* shared across tests.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
