[project]
name = "serverless-bookmark-manager"
version = "0.1.0"
description = "FastAPI backend for the serverless bookmark manager portfolio project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136,<0.140",
    # Transitive via fastapi, but pinned explicitly: fastapi's own
    # constraint (>=0.46.0) is loose enough that pip won't upgrade an
    # already-installed older starlette on its own, even though several
    # CVEs are fixed only in 1.3.1+.
    "starlette>=1.3.1,<2",
    "mangum>=0.20,<0.22",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.31,<0.32",
    "alembic>=1.16,<1.19",
    "pydantic[email]>=2.11,<3",
    "pydantic-settings>=2.8,<3",
    "argon2-cffi>=24,<26",
    "pyjwt>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.32,<0.33",
    # pytest and black bumped past their previous pins specifically to pick
    # up fixes for PYSEC-2026-1845 and CVE-2026-32274 (pip-audit caught
    # both). pytest-asyncio moves to the 1.x line alongside pytest 9 since
    # 0.24 doesn't declare support for it and 1.x is what does.
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=6.0,<8",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
    "black>=26.3.1,<27",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/etc. in argument defaults is the documented,
# intentional idiom (FastAPI inspects the default at call time) - not the
# "mutable default" footgun B008 exists to catch.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "mangum.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Explicit default (function scope) to silence pytest-asyncio's deprecation
# warning. Each test gets its own event loop; see tests/integration/conftest.py
# for why the cached engine is deliberately *not* shared across tests.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
